(lang dune 3.10)

(name ocaml_99_problems)

(generate_opam_files true)

(source
 (github moodyfox124/99_problems_ocaml))

(authors "moodyfox124")

(maintainers "moodyfox124")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name ocaml_99_problems)
 (synopsis "Solve 99 problems in ocaml")
 (description "Silly attemp to get familiar with ocaml through solving 99 problems")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
